--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .task-row-wrapper {
@@ -134,7 +134,7 @@ button {
 }
 
 .list-item > .task-input {
-  width: 226px
+  width: 226px;
 }
 
 .icon-remove {
@@ -149,19 +149,19 @@ button {
 
 /* Completed */
 #completed-tasks .task-title {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .task-input {
-  display: none
+  display: none;
 }
 
 .edit-mode .task-input,
 #new-task {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .edit-mode .task-title {
