refactor: change class names based on BEM notation according to rule 2.1 in html-and-css-extended.md

--- a/style.css
+++ b/style.css
@@ -7,17 +7,7 @@
 
 .header {
   width: 500px;
-  margin: 0 auto;
-  display: block;
   text-align: right;
-}
-
-#scheme-pic {
-  width: 100%;
-}
-
-.more-inf {
-  font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
@@ -28,56 +18,27 @@
 
 }
 
+.page__header {
+  margin: 0 auto;
+  display: block;
+}
+
+.header__matrix {
+  width: 100%;
+}
+
+.header__details {
+  font-family: fantasy, cursive;
+}
+
 .container {
   display: block;
   width: 500px;
   margin: 20px auto 0;
 }
 
-.task {
-  width: 56%;
-  display: inline-block;
-  flex-grow: 1;
-}
-
-.task-row-wrapper {
-  display: flex;
-  padding: 20px 0;
-}
-
-ul {
-  margin: 0;
-  padding: 0px;
-}
-
-li {
-  list-style: none;
-}
-
-input,
-button {
-  outline: none;
-}
-
-button {
-  background: none;
-  border: 0px;
-}
-
-.button {
-  color: #888;
-  font-size: 15px;
-  width: 60px;
-  font-family: Lato, sans-serif;
-  cursor: pointer;
-}
-
-.button:hover {
-  color: #3a3a3a;
-}
-
 /* Heading */
-.section-title {
+.tasks__heading {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -87,7 +48,20 @@ button {
   text-transform: uppercase;
 }
 
-.task-input {
+.new-task {
+  display: flex;
+}
+
+.tasks__new-task {
+  padding: 20px 0;
+}
+
+.new-task__input,
+.task__input {
+  outline: none;
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1;
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -100,72 +74,85 @@ button {
   color: #888;
 }
 
-.task-input:focus {
-  color: #333;
+.task__button {
+  outline: none;
+  background: none;
+  border: 0px;
+  color: #888;
+  font-size: 15px;
+  width: 60px;
+  font-family: Lato, sans-serif;
+  cursor: pointer;
 }
 
-/* New Task */
-.section-title.new {
-  display: block;
-  margin: 0 0 20px;
-}
-
-#new-task {
-  width: 318px;
+.task__button:hover {
+  color: #3a3a3a;
 }
 
 /* Task list */
-.list-item {
+.tasks__list {
+  margin: 0;
+  padding: 0px;
+}
+
+.task {
+  list-style: none;
   overflow: hidden;
-  padding: 20px 0;
-  border-bottom: 1px solid #eee;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.control {
+.list__task {
+  padding: 20px 0;
+  border-bottom: 1px solid #eee;
+}
+
+.task__checkbox {
+  outline: none;
   margin: 0 10px;
 }
 
-.task-title {
+.task__name {
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1;
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-.list-item > .task-input {
-  width: 226px;
+/* Completed */
+.task__name_completed {
+  text-decoration: line-through;
+  color: #888;
 }
 
-.icon-remove {
+.task__input:focus {
+  color: #333;
+}
+
+.task__icon-remove {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-.icon-remove:hover {
+.task__icon-remove:hover {
   transform: rotateZ(0);
 }
 
-/* Completed */
-#completed-tasks .task-title {
-  text-decoration: line-through;
-  color: #888;
-}
-
 /* Edit Task */
-.task-input {
+.task__input {
   display: none;
 }
 
-.edit-mode .task-input,
-#new-task {
+.task__input_edited,
+.new-task__input_new {
   display: inline-block;
-  width: 224px;
 }
 
-.edit-mode .task-title {
+.task__name_edited {
   display: none;
 }
